--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -1,5 +1,5 @@
 ---
-name: "cryptocashback-win-2.3"
+name: "cryptocashback-win-3.0"
 enable_cache: true
 suites:
 - "trusty"
@@ -22,8 +22,8 @@ packages:
 - "ca-certificates"
 - "python"
 remotes:
-- "url": "https://github.com/cryptocashback/cryptocashback.git"
-  "dir": "cryptocashback"
+- "url": "https://github.com/CryptoCashBack-Hub/CCB.git"
+  "dir": "CCB"
 files: []
 script: |
   WRAP_DIR=$HOME/wrapped
