--- a/contrib/gitian-descriptors/gitian-win-signer.yml
+++ b/contrib/gitian-descriptors/gitian-win-signer.yml
@@ -8,7 +8,7 @@ packages:
 - "libssl-dev"
 - "autoconf"
 remotes:
-- "url": "https://github.com/CryptoCashBack/CCB.SIGS.git"
+- "url": "https://github.com/MotoAcidc/CCB.SIGS.git"
   "dir": "signature"
 files:
 - "osslsigncode-1.7.1.tar.gz"
