--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -1,5 +1,5 @@
 ---
-name: "cryptocashback-linux-2.3"
+name: "cryptocashback-linux-3.0"
 enable_cache: true
 suites:
 - "trusty"
@@ -29,8 +29,8 @@ packages:
 - "python"
 reference_datetime: "2015-06-01 00:00:00"
 remotes:
-- "url": "https://github.com/cryptocashback/cryptocashback.git"
-  "dir": "cryptocashback"
+- "url": "https://github.com/CryptoCashBack-Hub/CCB.git"
+  "dir": "CCB"
 files: []
 script: |
 
